--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
     <head>
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <style>
+        .border {
+          background: #c8f7f5;
+          width: 80%; min-height:
+          800px; margin-left: auto;
+          margin-right: auto;
+          border: 30px solid #c8f7f5;
+          border-image: url('./cupcake.png') 30 round;
+        }
         .name {
           padding: 30px;
           width: max-content;
@@ -32,7 +40,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&display=swap" rel="stylesheet"> 
     </head>
     <body>
-      <div style="background: #c8f7f5; width: 80%; min-height: 800px; margin-left: auto; margin-right: auto; border: 30px solid #c8f7f5; border-image: url('cupcake.png') 30 round;">
+      <div style="">
         <div class="name">Daisy</div>
       </div>
       <script>
