--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           800px; margin-left: auto;
           margin-right: auto;
           border: 30px solid #c8f7f5;
-          border-image: url('./cupcake.png') 30 round;
+          border-image: url('/cupcake.png') 30 round;
         }
         .name {
           padding: 30px;
