--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           800px; margin-left: auto;
           margin-right: auto;
           border: 30px solid #c8f7f5;
-          border-image: url('http://daisymonaghan.com/cupcake.png') 30 round;
+          border-image: url('./cupcake.png') 30 round;
         }
         .name {
           padding: 30px;
@@ -40,7 +40,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&display=swap" rel="stylesheet"> 
     </head>
     <body>
-      <div style="">
+      <div class="border">
         <div class="name">Daisy</div>
       </div>
       <script>
