--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <div class="border">
         <div class="name">Daisy</div>
       </div>
+        </div>
       <script>
         let name = document.querySelector(".name");
 
