--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <style>
         .border {
+          display: flex;
+          justify-content: center;
           background: #c8f7f5;
-          width: 80%; min-height:
-          800px; margin-left: auto;
-          margin-right: auto;
+          width: 80%; 
+          min-height: 800px; 
+          padding: 5% 5% 5% 5%;
+          margin: auto auto auto auto;
           border: 30px solid #c8f7f5;
           border-image: url('./cupcake.png') 30 round;
         }
@@ -17,7 +20,7 @@
           font-family: 'Oleo Script Swash Caps', cursive; 
           font-size: 70px;
           animation-name: rock;
-          animation-duration: 1500ms;
+          animation-duration: 2000ms;
           animation-iteration-count: infinite;
           animation-timing-function: linear; 
         }
@@ -25,13 +28,13 @@
 
         @keyframes rock {
           0% {
-            transform:rotate(-45deg);
+            transform:rotate(-35deg);
           }
           50% {
-            transform:rotate(45deg);
+            transform:rotate(35deg);
           }
           100% {
-            transform:rotate(-45deg);
+            transform:rotate(-35deg);
           }
 
         } 
