--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
     <head>
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <style>
+        body {
+          background: #A2D2FF;
+        }
         .border {
           display: flex;
           justify-content: center;
-          background: #c8f7f5;
+          background: #BDE0FE;
           width: 80%; 
           min-height: 800px; 
-          padding: 5% 5% 5% 5%;
+          padding: 10% 5% 10% 5%;
           margin: auto auto auto auto;
           border: 30px solid #c8f7f5;
           border-image: url('./cupcake.png') 30 round;
